# TelQbot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docker-image.yml
data/: config.example.yml
docker/bot_redis/: docker-compose.yml
docker/bot_redis_qbittorrent/: docker-compose.yml
docker/from_source/: README.md  docker-compose.yml
docker/from_source/qbittorrent-bot-data/: config.example.yml
src/: content_categories.py  logger.py  main.py  stremio_admin.py  tasks.py  utils.py
src/bot/filters/callbacks/: __init__.py  content_category.py  list.py  stremio.py  torrent_info.py
src/bot/handlers/: commands.py  common.py  content_add.py  on_message.py
src/bot/handlers/callbacks/: __init__.py  add_torrents_callbacks.py  content_category_callbacks.py  list_callbacks.py  stremio_callbacks.py  torrent_info.py
src/bot/handlers/callbacks/category/: category_callbacks.py
src/bot/handlers/callbacks/content_category/: __init__.py
src/bot/handlers/callbacks/settings/: settings_callbacks.py
src/bot/middlewares/: __init__.py  authorization.py
src/client_manager/: client_manager.py
src/client_manager/entities/: torrent.py
src/client_manager/mappers/: qbittorrent_mapper.py
src/client_manager/qbittorrent_manager/: async_qbittorrent_client.py  qbittorrent_manager.py
src/redis_helper/: wrapper.py
src/settings/: __init__.py  content_category.py  stremio.py
